# idiolect

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  biome.json  deny.toml  package-lock.json  package.json  tsconfig.base.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit.yml  book.yml  ci.yml  lexicon-evolution.yml  release.yml  republish-npm.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
compositions/idiolect/: attitudinal_classes.ncl  records.ncl
crates/idiolect-cli/: Cargo.toml  README.md
crates/idiolect-cli/src/: encounter.rs  generated.rs  main.rs  oauth.rs  publish.rs  util.rs  verify.rs
crates/idiolect-cli/tests/: smoke.rs
crates/idiolect-codegen/: Cargo.toml  README.md  moon.yml
crates/idiolect-codegen/src/: lexicon.rs  lib.rs  main.rs  target.rs
crates/idiolect-codegen/src/emit/: family.rs  mod.rs  rust.rs  typescript.rs
crates/idiolect-codegen/src/spec_driven/: cli.rs  mod.rs  observer.rs  orchestrator.rs  verify.rs
crates/idiolect-codegen/tests/: layers_family.rs  panproto_fidelity.rs  parser_known_values_drift.rs
crates/idiolect-identity/: Cargo.toml  README.md
crates/idiolect-identity/src/: caching.rs  did.rs  document.rs  error.rs  lib.rs  reqwest_resolver.rs  resolver.rs
crates/idiolect-identity/tests/: reqwest_resolver.rs
crates/idiolect-indexer/: Cargo.toml  README.md  moon.yml
crates/idiolect-indexer/src/: cursor.rs  cursor_fs.rs  cursor_sqlite.rs  error.rs  event.rs  handler.rs  indexer.rs  jetstream.rs  lib.rs  reconnect.rs  resilience.rs  stream.rs  tapped.rs
crates/idiolect-indexer/tests/: arc_blanket.rs  config.rs  cursor_backends.rs  error_paths.rs  generic_family.rs  indexer_loop.rs  jetstream.rs  or_family.rs
crates/idiolect-lens/: Cargo.toml  README.md  moon.yml
crates/idiolect-lens/src/: at_uri.rs  caching_resolver.rs  dpop_p256.rs  error.rs  fetcher.rs  lib.rs  map_enum.rs  pds_atrium.rs  pds_reqwest.rs  publisher.rs  resolve.rs  resolver.rs  runtime.rs  schema_loader.rs  signing_writer.rs  verifying_resolver.rs
crates/idiolect-lens/tests/: caching.rs  lexicon_fidelity.rs  list_records.rs  pds_atrium.rs  pds_atrium_write.rs  pds_reqwest.rs  pds_resolve.rs  pds_smoke.rs  roundtrip.rs  runtime_deep.rs  send_bounds.rs
crates/idiolect-migrate/: Cargo.toml  README.md
crates/idiolect-migrate/src/: error.rs  lib.rs  plan.rs  record.rs
crates/idiolect-migrate/tests/: roundtrip.rs
crates/idiolect-oauth/: Cargo.toml  README.md  moon.yml
crates/idiolect-oauth/lexicons/: session.json
crates/idiolect-oauth/src/: lib.rs  refresh.rs  schema.rs  session.rs  store.rs  store_fs.rs  store_sqlite.rs
crates/idiolect-oauth/tests/: schema_roundtrip.rs  session_expiry.rs  store.rs  store_fs.rs  store_sqlite.rs
crates/idiolect-observer/: Cargo.toml  README.md
crates/idiolect-observer/src/: driver.rs  error.rs  generated.rs  handler.rs  instance_method.rs  lib.rs  main.rs  method.rs  publisher.rs
crates/idiolect-observer/src/methods/: action_distribution.rs  attribution_chains.rs  basis_distribution.rs  correction_rate.rs  deliberation_tally.rs  dialect_federation.rs  encounter_throughput.rs  lens_adoption.rs  mod.rs  purpose_distribution.rs  verification_coverage.rs
crates/idiolect-observer/tests/: log_publisher.rs  methods.rs  pds_publisher.rs  roundtrip.rs
crates/idiolect-orchestrator/: Cargo.toml  README.md
crates/idiolect-orchestrator/src/: catalog.rs  catalog_sqlite.rs  error.rs  expr_eval.rs  handler.rs  http.rs  lib.rs  main.rs  predicate_eval.rs  predicates.rs  query.rs  theory_resolver.rs
crates/idiolect-orchestrator/tests/: catalog.rs  catalog_sqlite.rs  http_api.rs
crates/idiolect-records/: Cargo.toml  README.md  moon.yml
crates/idiolect-records/src/: at_uri.rs  cid.rs  datetime.rs  did.rs  family.rs  language.rs  lib.rs  nsid.rs  record.rs  uri.rs  vocab.rs
crates/idiolect-records/tests/: any_record.rs  example_vocabs.rs  family.rs  roundtrip.rs
crates/idiolect-verify/: Cargo.toml  README.md
crates/idiolect-verify/src/: coercion_law.rs  error.rs  generated.rs  lib.rs  property_test.rs  roundtrip.rs  runner.rs  static_check.rs
deploy/docker/: observer.Dockerfile  orchestrator.Dockerfile
deploy/systemd/: idiolect-observer.service  idiolect-orchestrator.service
docs/: ci-cd.md  deployment.md  vocab-expressiveness.md
docs/book/: README.md  book.toml
docs/book/src/: SUMMARY.md  index.md
docs/book/src/concepts/: atproto-records.md  deliberation.md  idiolect-dialect-language.md  index.md  lens-laws.md  lexicon-evolution.md  lexicon-family.md  (+3 more)
docs/book/theme/: custom.css  katex-macros.txt
examples/idiolect-acorn/: README.md
examples/idiolect-acorn/lenses/: conversation-to-deliberation.ncl  statement-to-deliberation-statement.ncl  vote-to-deliberation-vote.ncl
lenses/vocab/: README.md  action-v1-to-granular-v1.yaml
lexicons/dev/idiolect/: adapter.json  bounty.json  community.json  correction.json  defs.json  deliberation.json  deliberationOutcome.json  deliberationStatement.json  deliberationVote.json  dialect.json  encounter.json  observation.json  recommendation.json  retrospection.json  verification.json  vocab.json
lexicons/dev/panproto/: VENDORED.md
morphisms/idiolect/: README.md  att_to_assertive.yaml  att_to_bouletic.yaml  att_to_declarative.yaml  att_to_doxastic.yaml  att_to_endorsive.yaml  att_to_evidential.yaml  att_to_illocutionary.yaml
observer-spec/: lexicon.json  methods.json
orchestrator-spec/: lexicon.json  queries.json
scripts/: lexicon-evolve.sh
scripts/publish-tutorial-lens/: Cargo.toml
scripts/publish-tutorial-lens/src/: apply.rs  main.rs  publish_recommendation.rs  verify.rs
theories/idiolect/: action-vocab.yaml  charter.yaml  condition.yaml  constraint.yaml  convention.yaml  eligibility.yaml  evidential.yaml  finding.yaml  illocutionary.yaml  lens_property.yaml  predicate.yaml  purpose-vocab.yaml  purpose.yaml  target.yaml  use.yaml
verify-spec/: lexicon.json  runners.json
(+108 files in other folders)
