[package]
name = "idiolect-migrate"
description = "Schema-diff and lens-based record migration. Given two versions of a lexicon, classifies the diff via panproto-check and — for diffs covered by shipped migration recipes — produces a PanprotoLens body that translates records from the old schema to the new."
readme = "README.md"
categories = ["data-structures", "encoding"]
keywords = ["atproto", "lexicon", "idiolect", "panproto", "migration"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# NOTE: blocked on panproto publishing to crates.io. Until then this
# crate has git-only deps and crates.io rejects git deps at publish.
publish = false

[lints]
workspace = true

[features]
default = []
# `idiolect-migrate` binary: streaming batch migration from a
# directory of JSON records through a lens at-uri, against a live
# PDS. Pulls in tokio + reqwest + the lens crate's PDS-reqwest
# transport.
cli = [
    "dep:anyhow",
    "dep:tokio",
    "dep:tracing-subscriber",
    "idiolect-lens/pds-reqwest",
]

[[bin]]
name = "idiolect-migrate"
path = "src/bin/idiolect_migrate.rs"
required-features = ["cli"]

[dependencies]
idiolect-records = { version = "0.10.0", path = "../idiolect-records" }
idiolect-lens    = { version = "0.10.0", path = "../idiolect-lens" }

panproto-schema    = { workspace = true }
panproto-protocols = { workspace = true }
panproto-check     = { workspace = true }
panproto-lens      = { workspace = true }
panproto-inst      = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = "0.1"

anyhow             = { version = "1", optional = true }
tokio              = { version = "1.48", default-features = false, features = ["macros", "rt-multi-thread"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { version = "1.48", default-features = false, features = ["macros", "rt"] }
