[package]
name = "idiolect-verify"
description = "Verification runners for dev.idiolect.verification records: given a lens, actually check the property (roundtrip-test, static-check) and emit a signed Verification record."
readme = "README.md"
categories = ["data-structures", "encoding"]
keywords = ["atproto", "lexicon", "idiolect", "panproto", "verification"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# NOTE: blocked on panproto publishing to crates.io. Until then this
# crate has git-only deps and crates.io rejects git deps at publish.
publish = false

[lints]
workspace = true

[dependencies]
idiolect-records = { version = "0.4.3", path = "../idiolect-records" }
idiolect-lens    = { version = "0.4.3", path = "../idiolect-lens" }

panproto-schema    = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = "0.1"

[dev-dependencies]
tokio         = { version = "1.48", default-features = false, features = ["macros", "rt"] }
panproto-lens = { workspace = true }
